--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Jost";
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color-scheme: light;
+  color: rgba(10, 10, 10, 0.95);
   background-color: #242424;
 
   font-synthesis: none;
@@ -12,6 +12,8 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+  height: 100%;
 }
 
 a {
@@ -23,19 +25,27 @@ a:hover {
   color: #535bf2;
 }
 
+html {
+  padding: 0;
+  margin: 0;
+}
+
 body {
   margin: 0;
+  padding: 0;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+ 
+  /* place-items: center; */
+  /* min-width: 320px; */
+  /* min-height: 100vh; */
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  color: rgb(10, 10, 10);
 }
-
+/* 
 button {
   border-radius: 8px;
   border: 1px solid transparent;
@@ -50,20 +60,61 @@ button {
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+} */
+
+
+/* CODE FOR HOVER POPUP ARIA LABEL */
+
+
+[aria-label] {
+	position: relative;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+[aria-label]:after {
+	content: attr(aria-label);
+	/* display: none; */
+	opacity: 0;
+	position: absolute;
+	top: 0;
+	left: -50px;
+  width: 250px;
+  height: auto;
+  overflow-wrap: break-word;
+	z-index: 101;
+	pointer-events: none;
+	padding: 1rem;
+  /* padding-bottom: 1.5rem; */
+	line-height: 15px;
+	/* white-space: nowrap; */
+	text-decoration: none;
+	text-indent: 0;
+	overflow: visible;
+	font-size: 14px;
+	font-weight: normal;
+	color: #fff;
+	text-shadow: 1px 0 1px #888;
+	background-color: #1a1a1a;
+	-webkit-border-radius: 2px;
+	border-radius: 8px;
+	-webkit-box-shadow: 1px 2px 6px rgba(0, 0, 0, 0.3);
+	box-shadow: 1px 2px 6px rgba(0, 0, 0, 0.3);
+	transition: all 0.15s ease;
+}
+
+[aria-label]:hover:after,
+[aria-label]:focus:after {
+	/* display: block; */
+	opacity: 1;
+	top: -60px;
+}
+
+/* CODE FOR POPUP ARIA LABEL END */
+
+
+.dottedUnderline {
+  text-decoration: underline dotted;
 }
