--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -8,6 +8,7 @@
 	top: 20px;
 	/* background-color: rgba(211, 211, 211, 0.7); */
 	z-index: 10;
+	transition: all .4s ease;
   }
   
   .grad-bar {
@@ -32,6 +33,8 @@
 	overflow: hidden;
 	box-shadow:  0 10px 15px rgba(22, 22, 22, 0.2);
 	backdrop-filter: blur(7px);
+	transition: all .3s ease;
+
   }
 
   .navbar.noeff {
