--- a/src/styles/ImageRenderer.scss
+++ b/src/styles/ImageRenderer.scss
@@ -4,7 +4,7 @@
 	position: relative;
 	max-height: max-content;
 	// max-width: 800px;
-	margin: 20px auto;
+	// margin: 20px auto;
 	margin-bottom: 0px !important;
 	display: flex;
 }
