--- a/src/styles/Hero.scss
+++ b/src/styles/Hero.scss
@@ -9,15 +9,15 @@
 	height: auto;
 
 	section {
-		min-height: 90vh;
+		min-height: 85vh;
 		max-height: max-content;
 	}
 
-	section.hi {
-		min-height: 80vh;
-	}
+	// section.hi {
+	// 	min-height: 80vh;
+	// }
 
-	.hi {
+	section.hi {
 		display: flex;
 		flex-direction: row;
 		width: 100%;
@@ -54,6 +54,12 @@
 
 			.niyaLabel {
 				cursor: crosshair;
+				text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+				transition: color 0.2s cubic-bezier(0.28, 0.76, 0, 2.91);
+
+				&:hover {
+					color: #3a93dc;
+				}
 			}
 
 			.subText {
@@ -62,7 +68,7 @@
 		}
 	}
 
-	.about {
+	section.about {
 		// background-color: rgba($color: #fff, $alpha: 0.6);
 		background-color: #f7d7b9;
 		height: 80vh;
@@ -77,7 +83,7 @@
 			justify-content: center;
 			align-items: center;
 			gap: 1rem;
-			width: 90%;
+			width: 80%;
 			// height: 100%;
 			margin: auto;
 		}
@@ -98,16 +104,15 @@
 			flex-direction: column;
 			gap: 1rem;
 			width: 80%;
-			
 
-			.aboutOpener {
-				display: block;
-				// background-color: red;
-			}
+			// .aboutOpener {
+			// 	display: block;
+			// 	// background-color: red;
+			// }
 
-			.aboutOpener.mobile {
-				display: none;
-			}
+			// .aboutOpener.mobile {
+			// 	display: none;
+			// }
 
 			div {
 				text-align: left;
@@ -116,11 +121,18 @@
 			.otherFeatures {
 				ul {
 					display: flex;
-					gap: .3rem;
+					gap: 0.3rem;
 					// list-style: circle;
 				}
 			}
 		}
+	}
+
+	section.login {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
 	}
 }
 
@@ -157,7 +169,6 @@
 			height: 100%;
 			background-color: #f7d7b9;
 
-
 			.subText {
 				display: none;
 			}
@@ -165,14 +176,16 @@
 	}
 
 	.about {
-		margin-top: 2.5rem;
+		// margin-top: 2.5rem;
+		height: 80vh !important;
+		// background: linear-gradient(to top, transparent, #f7d7b9 30% ) !important;
 		justify-content: center;
 		align-items: center;
 
-
 		.aboutText {
 			width: 94% !important;
-			// margin: 0 auto !important;
+			height: 60%;
+			// padding: auto 0 !important;
 
 			.aboutImageWrapper {
 				display: none;
@@ -182,15 +195,19 @@
 				width: 100%;
 				gap: 1rem;
 
-				
-			.aboutOpener {
-				display: none;
-			}
+				// .aboutOpener {
+				// 	display: none;
+				// }
 
-			.aboutOpener.mobile {
-				display: block;
-			}
+				// .aboutOpener.mobile {
+				// 	display: block;
+				// }
 			}
 		}
+	}
+
+	.try {
+		height: 80vh;
+		background-color: red;
 	}
 }
