--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,6 +1,3 @@
-
-
-
 .nav-wrapper {
 	width: 99%;
 	position: -webkit-sticky; /* Safari */
@@ -8,22 +5,22 @@
 	top: 20px;
 	/* background-color: rgba(211, 211, 211, 0.7); */
 	z-index: 10;
-	transition: all .4s ease;
-  }
-  
-  .grad-bar {
+	transition: all 0.4s ease;
+}
+
+.grad-bar {
 	width: 100%;
 	height: 5px;
-	background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
+	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
 	background-size: 400% 400%;
-		-webkit-animation: gradbar 15s ease infinite;
-	  -moz-animation: gradbar 15s ease infinite;
-	  animation: gradbar 15s ease infinite;
-  }
-  
-  /* NAVIGATION */
-  
-  .navbar {
+	-webkit-animation: gradbar 15s ease infinite;
+	-moz-animation: gradbar 15s ease infinite;
+	animation: gradbar 15s ease infinite;
+}
+
+/* NAVIGATION */
+
+.navbar {
 	display: grid;
 	grid-template-columns: 1fr 3fr;
 	align-items: center;
@@ -31,109 +28,110 @@
 	width: 95%;
 	margin: 0 auto;
 	overflow: hidden;
-	box-shadow:  0 10px 15px rgba(22, 22, 22, 0.2);
+	box-shadow: 0 10px 15px rgba(22, 22, 22, 0.2);
 	backdrop-filter: blur(7px);
-	transition: all .3s ease;
+	transition: all 0.3s ease;
+}
 
-  }
-
-  .navbar.noeff {
+.navbar.noeff {
 	box-shadow: none;
 	backdrop-filter: none;
-  }
-  
-  .navbar img {
+}
+
+.navbar img {
 	height: 16px;
 	width: auto;
 	justify-self: start;
 	margin-left: 20px;
-  }
-  
-  .navbar ul {
+}
+
+.navbar ul {
 	list-style: none;
 	display: grid;
-	grid-template-columns: repeat(3,1fr);
+	grid-template-columns: repeat(3, 1fr);
 	justify-self: end;
 	margin-right: 1rem;
 	height: 100%;
-  }
+}
 
-  .navbar ul li {
+.navbar ul li {
 	height: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-  }
+}
 
-  .nav-item {
+.nav-item {
 	padding: 0 1rem;
-  }
-  
-  .nav-item a {
+}
+
+.nav-item a {
 	color: #181818;
-	outline: 1px white;
+	/* outline: 10px white; */
 	font-size: 1.3rem;
 	font-weight: 600;
 	text-decoration: none;
 	transition: color 0.3s ease-out;
-  }
-  
-  .nav-item a:hover {
+	/* filter: invert(1); */
+	isolation: isolate;
+	mix-blend-mode: difference !important;
+}
+
+.nav-item a:hover {
 	color: #3498db;
-  }
-  
-  
-  /* SEARCH FUNCTION */
-  
-  #search-icon {
+}
+
+/* SEARCH FUNCTION */
+
+#search-icon {
 	font-size: 0.9rem;
 	margin-top: 3px;
 	margin-left: 15px;
 	transition: color 0.3s ease-out;
-  }
-  
-  #search-icon:hover {
+}
+
+#search-icon:hover {
 	color: #3498db;
 	cursor: pointer;
-  }
-  
-  .search {
+}
+
+.search {
 	transform: translate(-35%);
 	-webkit-transform: translate(-35%);
 	transition: transform 0.7s ease-in-out;
 	color: #3498db;
-  }
-  
-  .no-search {
+}
+
+.no-search {
 	transform: translate(0);
 	transition: transform 0.7s ease-in-out;
-  }
-  
-  .search-input {
+}
+
+.search-input {
 	position: absolute;
 	top: -4px;
 	right: -125px;
 	opacity: 0;
 	z-index: -1;
 	transition: opacity 0.6s ease;
-  }
-  
-  .search-active {
+}
+
+.search-active {
 	opacity: 1;
 	z-index: 0;
-  }
-  
-  input {
+}
+
+input {
 	border: 0;
 	border-left: 1px solid #ccc;
 	border-radius: 0; /* FOR SAFARI */
 	outline: 0;
 	padding: 5px;
-  }
-  
-  /* MOBILE MENU & ANIMATION */
-  
-  .menu-toggle .bar{
+}
+
+/* MOBILE MENU & ANIMATION */
+
+.menu-toggle .bar {
 	width: 25px;
 	height: 3px;
 	background-color: #3f3f3f;
@@ -141,215 +139,142 @@
 	-webkit-transition: all 0.3s ease-in-out;
 	-o-transition: all 0.3s ease-in-out;
 	transition: all 0.3s ease-in-out;
-  }
-  
-  .menu-toggle {
+}
+
+.menu-toggle {
 	justify-self: end;
 	margin-right: 25px;
 	display: none;
-  }
-  
-  .menu-toggle:hover{
+}
+
+.menu-toggle:hover {
 	cursor: pointer;
-  }
-  
-  #mobile-menu.is-active .bar:nth-child(2){
+}
+
+#mobile-menu.is-active .bar:nth-child(2) {
 	opacity: 0;
-  }
-  
-  #mobile-menu.is-active .bar:nth-child(1){
+}
+
+#mobile-menu.is-active .bar:nth-child(1) {
 	-webkit-transform: translateY(8px) rotate(45deg);
 	-ms-transform: translateY(8px) rotate(45deg);
 	-o-transform: translateY(8px) rotate(45deg);
 	transform: translateY(8px) rotate(45deg);
-  }
-  
-  #mobile-menu.is-active .bar:nth-child(3){
+}
+
+#mobile-menu.is-active .bar:nth-child(3) {
 	-webkit-transform: translateY(-8px) rotate(-45deg);
 	-ms-transform: translateY(-8px) rotate(-45deg);
 	-o-transform: translateY(-8px) rotate(-45deg);
 	transform: translateY(-8px) rotate(-45deg);
-  }
-  
-  /* KEYFRAME ANIMATIONS */
-  
-  @-webkit-keyframes gradbar {
-	  0% {
-		  background-position: 0% 50%
-	  }
-	  50% {
-		  background-position: 100% 50%
-	  }
-	  100% {
-		  background-position: 0% 50%
-	  }
-  }
-  
-  @-moz-keyframes gradbar {
-	  0% {
-		  background-position: 0% 50%
-	  }
-	  50% {
-		  background-position: 100% 50%
-	  }
-	  100% {
-		  background-position: 0% 50%
-	  }
-  }
-  
-  @keyframes gradbar {
-	  0% {
-		  background-position: 0% 50%
-	  }
-	  50% {
-		  background-position: 100% 50%
-	  }
-	  100% {
-		  background-position: 0% 50%
-	  }
-  }
-  
-  /* Media Queries */
-  
-	/* Mobile Devices - Phones/Tablets */
-  
-  @media only screen and (max-width: 720px) { 
+}
+
+/* KEYFRAME ANIMATIONS */
+
+@-webkit-keyframes gradbar {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
+@-moz-keyframes gradbar {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
+@keyframes gradbar {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
+/* Media Queries */
+
+/* Mobile Devices - Phones/Tablets */
+
+@media only screen and (max-width: 720px) {
 	.features {
-	  flex-direction: column;
-	  padding: 50px;
+		flex-direction: column;
+		padding: 50px;
 	}
-	
+
 	/* MOBILE HEADINGS */
-	
+
 	h1 {
-	  font-size: 1.9rem;
+		font-size: 1.9rem;
 	}
-	
+
 	h2 {
-	  font-size: 1rem;
+		font-size: 1rem;
 	}
-	
+
 	p {
-	  font-size: 0.8rem;
+		font-size: 0.8rem;
 	}
-	
+
 	/* MOBILE NAVIGATION */
-	   
+
 	.navbar ul {
-	  display: flex;
-	  flex-direction: column;
-	  position: fixed;
-	  justify-content: start;
-	  top: 80px;
-	  /* left: 0; */
-	  background-color: #c69961;
-	  /* backdrop-filter: blur(2px); */
-	  width: 98%;
-	  margin: 0 auto !important;
-	  height: calc(100vh - 55px);
-	  transform: translate(-101%);
-	  text-align: center;
-	  overflow: hidden;
-	  transition: all .3s cubic-bezier(0, 1.2, 0, 1.05);
+		display: flex;
+		flex-direction: column;
+		position: fixed;
+		justify-content: start;
+		top: 80px;
+		/* left: 0; */
+		background-color: #c69961;
+		/* backdrop-filter: blur(2px); */
+		width: 98%;
+		margin: 0 auto !important;
+		height: calc(100vh - 55px);
+		transform: translate(-101%);
+		text-align: center;
+		overflow: hidden;
+		transition: all 0.3s cubic-bezier(0, 1.2, 0, 1.05);
 	}
-	
+
 	.navbar li {
-	  padding: 15px;
-	  /* font-size: 16rem !important; */
+		padding: 15px;
+		/* font-size: 16rem !important; */
 	}
-	
+
 	.navbar li:first-child {
-	  margin-top: 50px;
+		margin-top: 50px;
 	}
-	
+
 	.navbar li a {
 		font-weight: 600;
-	  font-size: 1.5rem;
+		font-size: 1.5rem;
 	}
-	 
-	.menu-toggle, .bar {
-	  display: block;
-	  cursor: pointer;
+
+	.menu-toggle,
+	.bar {
+		display: block;
+		cursor: pointer;
 	}
-	
+
 	.mobile-nav {
-		transform: translate(0%)!important;
+		transform: translate(0%) !important;
 		width: 100%;
 		padding: 0;
 		margin: 0 auto;
-  }
-}
-
-.mainBtnWrapper {
-	height: 100%;
-	width: 100%;
-	max-height: 100%;
-	max-width: 100%;
-}
-
-/* button */
-.mainBtn {
-	color: #111 !important;
-	font-weight: 600;
-	font-size: 18px;
-	display: block;
-	padding: .8rem .1rem;
-	padding: .3rem;
-	border: none;
-	border-radius: 1px;
-	width: 100px;
-	background: none;
-	color: inherit;
-	vertical-align: middle;
-	position: relative;
-	z-index: 1;
-	border: 3px solid black;
-	font-family: "Jost", sans-serif;
-	-webkit-backface-visibility: hidden;
-	-moz-osx-font-smoothing: grayscale;
-	overflow: hidden;
-	-webkit-transition: border-color 0.3s, color 0.3s;
-	transition: border-color 0.3s, color 0.3s;
-	-webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
-	transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
-}
-.mainBtn:focus {
-	outline: none;
-}
-.mainBtn > span {
-	vertical-align: top;
-}
-
-.mainBtn span svg {
-	vertical-align: top;
-}
-
-.mainBtn::before {
-	content: "";
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 150%;
-	height: 100%;
-	background: #092b89;
-	z-index: -1;
-	-webkit-transform: rotate3d(0, 0, 1, -45deg) translate3d(0, -3em, 0);
-	transform: rotate3d(0, 0, 1, -45deg) translate3d(0, -3em, 0);
-	-webkit-transform-origin: 0% 100%;
-	transform-origin: 0% 100%;
-	-webkit-transition: -webkit-transform 0.3s, opacity 0.3s, background-color 0.3s;
-	transition: transform 0.3s, opacity 0.3s, background-color 0.3s;
-}
-.mainBtn:hover {
-	color: rgb(221, 221, 221);
-	border-color: rgb(29, 29, 29);
-	cursor: pointer;
-}
-.mainBtn:hover::before {
-	opacity: 1;
-	background-color: rgb(36, 36, 36);
-	-webkit-transform: rotate3d(0, 0, 1, 0deg);
-	transform: rotate3d(0, 0, 1, 0deg);
-	-webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
-	transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+	}
 }
