--- a/src/styles/Hero.scss
+++ b/src/styles/Hero.scss
@@ -140,6 +140,23 @@
 			justify-content: center;
 			align-items: center;
 			margin: 0 auto;
+
+			.tryTextWrapper {
+				display: block;
+
+				.otherFeatures .featuresWrapper {
+					list-style: none;
+					display: grid;
+					grid-template-columns: repeat(3, 1fr);
+					grid-template-rows: repeat(2, 1fr);
+					grid-column-gap: 15px;
+					grid-row-gap: 15px;
+				}
+			}
+
+			.tryTextWrapperMobile {
+				display: none !important;
+			}
 		}
 	}
 
@@ -225,7 +242,20 @@
 	}
 
 	.try {
-		height: 80vh;
-		background-color: red;
+		.tryWrapper {
+			width: 100%;
+			height: 100%;
+			
+			.tryTextWrapper {
+				background-color: blue;
+				display: none !important;
+			}
+			.tryTextWrapperMobile {
+				height: 100px;
+				width: 100px;
+				background-color: red;
+				display: block !important;
+			}
+		}
 	}
 }
