--- a/src/styles/LoginSignupSwitch.scss
+++ b/src/styles/LoginSignupSwitch.scss
@@ -38,12 +38,64 @@ $fsize: 14px;
 }
 
 .app .title_container {
-	width: 100px;
-	height: 40px;
+	width: 100%;
+	height: 100px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
+
+	.welcome-text {
+		padding-bottom: 1rem;
+	}
+
+	.switch-wrapper {
+		height: 2px;
+		width: 100%;
+
+		div {
+			cursor: pointer;
+			user-select: none;
+		}
+
+		.switch-indicator {
+			width: 50%;
+			height: 100%;
+			margin-left: 0;
+			background-color: $primary1;
+			transition: margin-left 500ms cubic-bezier(1, 0, 0, 1);
+		}
+	}
+
+	.page-switcher {
+		background-color: lighten($bg, 20);
+		width: 100%;
+		height: 100%;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+
+		.switch-wrapper {
+			display: flex;
+
+			div {
+				display: flex;
+				justify-content: center;
+				align-items: center;
+			}
+		}
+
+		div {
+			width: 100%;
+			height: 100%;
+			padding: auto 0;
+
+			span {
+				margin: auto 0;
+			}
+		}
+	}
 
 	.gotopage1-btn {
 		background-color: transparent;
@@ -159,9 +211,9 @@ $fsize: 14px;
 	vertical-align: middle;
 }
 
-.pwdinp_btn .showhide {
+.pwdinp_btn .showhide, .dateinput .showhide {
 	position: absolute;
-	// right: min(10%, 50px);
+	right: min(10%, 50px);
 	max-width: 30px;
 	height: 30px;
 	border-radius: 13px;
