added login function, login w both email and username

--- a/src/styles/LoginSignupSwitch.scss
+++ b/src/styles/LoginSignupSwitch.scss
@@ -311,7 +311,7 @@ $fsize: 14px;
 
 		.page {
 			max-height: 300px !important;
-			overflow-y: scroll;
+			overflow-y: auto;
 			.container {
 				overflow: hidden;
 				// background-color: red;
