added custom scrollbar, removed mobile only content in hero

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600&display=swap');
+
 :root {
   font-family: "Jost";
   line-height: 1.5;
@@ -224,7 +226,7 @@ button:focus-visible {
 	padding: 0.6rem;
 	border: none;
 	border-radius: 1px;
-	width: 150px;
+	/* width: 150px; */
 	background: none;
 	color: inherit;
 	vertical-align: middle;
@@ -286,7 +288,7 @@ button:focus-visible {
 	position: absolute;
 	bottom: 0;
 	right: 0;
-	width: 150%;
+	width: 180%;
 	height: 80%;
 	background: #b20a85;
 	z-index: -1;
