--- a/src/index.css
+++ b/src/index.css
@@ -1,51 +1,51 @@
-@import url('https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600;700&display=swap");
 
 :root {
-  font-family: "Jost";
-  line-height: 1.5;
-  font-weight: 400;
+	font-family: "Jost";
+	line-height: 1.5;
+	font-weight: 400;
 
-  color-scheme: light;
-  color: rgba(10, 10, 10, 0.95);
-  background-color: #242424;
+	color-scheme: light;
+	color: rgba(10, 10, 10, 0.95);
+	background-color: #000000;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+	font-synthesis: none;
+	text-rendering: optimizeLegibility;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	-webkit-text-size-adjust: 100%;
 
-  height: 100%;
+	height: 100%;
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+	font-weight: 500;
+	color: #646cff;
+	text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+	color: #535bf2;
 }
 
 html {
-  padding: 0;
-  margin: 0;
+	padding: 0;
+	margin: 0;
 }
 
 body {
-  margin: 0;
-  padding: 0;
-  display: flex;
- 
-  /* place-items: center; */
-  /* min-width: 320px; */
-  /* min-height: 100vh; */
+	margin: 0;
+	padding: 0;
+	display: flex;
+
+	/* place-items: center; */
+	/* min-width: 320px; */
+	/* min-height: 100vh; */
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-  color: rgb(10, 10, 10);
+	font-size: 3.2em;
+	line-height: 1.1;
+	/* color: rgb(10, 10, 10); */
 }
 /* 
 button {
@@ -68,9 +68,7 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 } */
 
-
 /* CODE FOR HOVER POPUP ARIA LABEL */
-
 
 .popup[aria-label] {
 	position: relative;
@@ -83,16 +81,16 @@ button:focus-visible {
 	position: absolute;
 	top: 0;
 	left: -50px;
-  max-width: 250px;
-  min-width: 200px; 
-  /* ! DYNAMIC WIDTH FIX */
-  height: auto;
-  overflow-wrap: break-word;
-  text-align: center;
+	max-width: 250px;
+	min-width: 200px;
+	/* ! DYNAMIC WIDTH FIX */
+	height: auto;
+	overflow-wrap: break-word;
+	text-align: center;
 	/* z-index: 101; */
 	pointer-events: none;
 	padding: 1rem;
-  /* padding-bottom: 1.5rem; */
+	/* padding-bottom: 1.5rem; */
 	line-height: 15px;
 	/* white-space: nowrap; */
 	text-decoration: none;
@@ -119,14 +117,12 @@ button:focus-visible {
 
 /* CODE FOR POPUP ARIA LABEL END */
 
-
 .dottedUnderline {
-  text-decoration: underline dotted;
-  cursor: crosshair;
+	text-decoration: underline dotted;
+	cursor: crosshair;
 }
 
 /* CODE FOR SNAP BUTTON */
-
 
 .mainBtnWrapper {
 	height: 100%;
@@ -202,12 +198,9 @@ button:focus-visible {
 	transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
 }
 
-
 /* CODE FOR SNAP BUTTON END */
 
 /* CODE FOR DOUBLE SNAP BUTN */
-
-
 
 .doubleBtnWrapper {
 	height: 100%;
@@ -296,8 +289,8 @@ button:focus-visible {
 	transform: rotate3d(1, 0, 0, 45deg) translate3d(0, 3em, 0);
 	-webkit-transform-origin: 100% 0%;
 	transform-origin: 100% 0%;
-	-webkit-transition: -webkit-transform .4s, opacity .4s, background-color .4s;
-	transition: transform .4s, opacity .4s, background-color .4s;
+	-webkit-transition: -webkit-transform 0.4s, opacity 0.4s, background-color 0.4s;
+	transition: transform 0.4s, opacity 0.4s, background-color 0.4s;
 }
 
 .doubleBtn:hover::after {
@@ -310,3 +303,16 @@ button:focus-visible {
 }
 
 /* CODE FOR SNAP BUTTON END */
+
+.noMobileTapHighlight {
+	-webkit-tap-highlight-color: transparent;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
+.noMobileTapHighlight:focus {
+	outline: none !important;
+}
