--- a/src/styles/LoginSignupSwitch.scss
+++ b/src/styles/LoginSignupSwitch.scss
@@ -2,8 +2,9 @@
 $fsize: 14px;
 
 .app {
-	background-color: lighten(#17181f, 10) !important;
-	color: white;
+	background-color: #efa96c;
+	border: 4px solid lighten(#efa96c, 20);
+	color: black;
 	position: absolute;
 	left: 50%;
 	top: 50%;
@@ -12,7 +13,7 @@ $fsize: 14px;
 	// height: max(90%, 570px);
 	height: min(90vh, 590px);
 	// background-color: $bg;
-	border-radius: 15px;
+	border-radius: 8px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -62,13 +63,13 @@ $fsize: 14px;
 			width: 50%;
 			height: 100%;
 			margin-left: 0;
-			background-color: $primary1;
+			background-color: lighten(#ffd2ab, 30);
 			transition: margin-left 500ms cubic-bezier(1, 0, 0, 1);
 		}
 	}
 
 	.page-switcher {
-		background-color: lighten($bg, 20);
+		background-color: #ffd2ab;
 		width: 100%;
 		height: 100%;
 		display: flex;
@@ -139,8 +140,8 @@ $fsize: 14px;
 	margin-bottom: 1.3rem;
 }
 
-.app .page .extra_container div,
-.app .page .input_container div {
+// .app .page .extra_container div,
+.app .page .container div {
 	width: 100%;
 	display: flex;
 	flex-direction: column;
@@ -151,19 +152,21 @@ $fsize: 14px;
 .app .page .extra_container div input,
 .app .page .input_container div input {
 	width: 80% !important;
-	background: linear-gradient(to left, rgb(53, 55, 71), rgb(53, 58, 68));
+	// background: linear-gradient(to left, rgb(53, 55, 71), rgb(53, 58, 68));
+	background: lighten(#efa96c, 8);
+	// background: rgba(#efa96c, .1);
 	border: 2px solid transparent;
 	padding: 0.9rem 1rem;
 	border-radius: 20px;
 	outline: none;
 	text-align: center;
 	font-size: $fsize;
-	color: $text;
+	color: black;
 }
 
 .app .page .extra_container input:hover,
-.app .page .input_container input:hover {
-	border: 2px solid $checkbox-border-hover;
+.app .page .input_container input:focus {
+	border: 2px solid lighten(#efa96c, 20);
 }
 
 .app .btn_link_container .next_step_btn {
@@ -173,9 +176,10 @@ $fsize: 14px;
 	border-radius: 2rem;
 	border-style: none;
 	cursor: pointer;
-	color: $text;
-	background-color: $bg;
-	border: 2px solid $primary1;
+	// color: bla;
+	background-color: lighten(#ec984f, 15);
+	border: 3px solid transparent;
+	transition: all 0.15s ease;
 	display: flex;
 	justify-content: center;
 
@@ -184,12 +188,9 @@ $fsize: 14px;
 	}
 }
 
-.app .btn_link_container .next_step_btn:hover {
-	border-color: $primary2;
-}
-
+.app .btn_link_container .next_step_btn:hover,
 .app .btn_link_container .next_step_btn:focus {
-	border-color: $primary2;
+	border-color: lighten(#efa96c, 20);
 }
 
 .app a {
@@ -211,7 +212,8 @@ $fsize: 14px;
 	vertical-align: middle;
 }
 
-.pwdinp_btn .showhide, .dateinput .showhide {
+.pwdinp_btn .showhide,
+.dateinput .showhide {
 	position: absolute;
 	right: min(10%, 50px);
 	max-width: 30px;
@@ -304,7 +306,7 @@ $fsize: 14px;
 
 .page-container {
 	width: 100% !important;
-	transition: all .5s ease;
+	transition: all 0.5s ease;
 
 	.page_inner {
 		width: 100%;
@@ -324,7 +326,7 @@ $fsize: 14px;
 			width: 100%;
 			margin: 0 auto;
 
-			.container {				
+			.container {
 				div {
 					input {
 						position: relative;
