--- a/src/styles/PromptOverlay.scss
+++ b/src/styles/PromptOverlay.scss
@@ -10,7 +10,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: $bg;
+    background-color: rgba($color: #000000, $alpha: .95);
     opacity: 0.99;
     transition: all 200ms cubic-bezier(1, 0, 0, 1);
 
@@ -24,7 +24,7 @@
 
     .prompt {
         z-index: 70;
-        background-color: lighten($color: $bg, $amount: 10);
+        // background-color: lighten($color: #f8cf9c, $amount: 10);
         color: $text;
         min-height: 300px;
         max-height: 90%;
