--- a/src/styles/Notifications.scss
+++ b/src/styles/Notifications.scss
@@ -1,94 +1,100 @@
-.notifications {
-	width: 350px;
-	z-index: 99999999;
-	display: grid;
-	gap: 1rem;
-	position: fixed;
-	right: 1rem;
-	top: 1rem;
-	transition: 0.125s opacity;
-	&.focus .notif {
-		visibility: hidden;
-	}
-	&.focus .notif.important {
-		visibility: visible;
-	}
-	.history {
-		display: grid;
-		gap: 1rem;
-	}
-	.notif {
-		user-select: none;
-		.icon {
-			color: var(--sub-color);
-			padding: 1rem 1rem;
-			align-items: center;
-			display: grid;
-			font-size: 1.25em;
-		}
-		.message {
-			padding: 1rem 1rem 1rem 0;
-			// color: var(--text-color);
-			.title {
-				color: var(--sub-color);
-				font-size: 0.75em;
-			}
-		}
-
-		position: relative;
-		//   background: var(--sub-alt-color);
-		background-color: #e0ab6a;
-		color: var(--sub-color);
-		display: grid;
-		grid-template-columns: min-content auto min-content;
-		border-radius: 8px;
-		// outline-width: 0.25em;
-		// outline-style: solid;
-		// outline-color: var(--sub-color);
-		box-shadow: 0 0 0 0.2em lighten(#f8cf9c, 10);
-
-		&.bad {
-			// background-color: var(--error-color);
-			box-shadow: 0 0 0 0.2em var(--error-color);
-			color: var(--error-color);
-			.icon {
-				color: var(--error-color);
-			}
-		}
-
-		&.good {
-			box-shadow: 0 0 0 0.2em var(--main-color);
-			color: var(--main-color);
-			.icon {
-				color: var(--main-color);
-			}
-		}
-
-		&:hover {
-			// opacity: .5;
-			// box-shadow: 0 0 20px rgba(0,0,0,.25);
-			cursor: pointer;
-			&::after {
-				opacity: 1;
-			}
-		}
-		&::after {
-			transition: 0.125s;
-			font-family: "Font Awesome 5 Free";
-			background: rgba(0, 0, 0, 0.5);
-			opacity: 0;
-			font-weight: 900;
-			content: "\f00d";
-			position: absolute;
-			width: 100%;
-			height: 100%;
-			// color: inherit;
-			font-size: 2.5rem;
-			display: grid;
-			/* align-self: center; */
-			align-items: center;
-			text-align: center;
-			border-radius: var(--roundness);
-		}
-	}
-}
+.notifications.container {
+    width: 350px;
+    z-index: 99999999;
+    display: grid;
+    gap: 1rem;
+    position: fixed;
+    right: 1rem;
+    top: 1rem;
+    transition: 0.125s opacity;
+    &.focus .notif {
+      visibility: hidden;
+    }
+    &.focus .notif.important {
+      visibility: visible;
+    }
+    .notifications.list {
+      display: grid;
+      gap: 1rem;
+    }
+    .notif {
+      user-select: none;
+      .icon {
+        color: var(--sub-color);
+        padding: 1rem 1rem;
+        align-items: center;
+        display: grid;
+        font-size: 1.25em;
+      }
+      .message {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        text-align: left;
+        padding: 1rem;
+        // color: var(--text-color);
+        .title {
+          color: var(--sub-color);
+          font-size: 0.75em;
+        }
+      }
+  
+      position: relative;
+    //   background: var(--sub-alt-color);
+      background-color: #e0ab6a;
+      color: var(--sub-color);
+      display: grid;
+      grid-template-columns: min-content auto min-content;
+      border-radius: 8px;
+      // outline-width: 0.25em;
+      // outline-style: solid;
+      // outline-color: var(--sub-color);
+      box-shadow: 0 0 0 0.2em lighten(#f8cf9c, 10);
+  
+      &.bad {
+        // background-color: var(--error-color);
+        box-shadow: 0 0 0 0.2em var(--error-color);
+        color: var(--error-color);
+        .icon {
+          color: var(--error-color);
+        }
+      }
+  
+      &.good {
+        box-shadow: 0 0 0 0.2em var(--main-color);
+        color: var(--main-color);
+        .icon {
+          color: var(--main-color);
+        }
+      }
+  
+      &:hover {
+        // opacity: .5;
+        // box-shadow: 0 0 20px rgba(0,0,0,.25);
+        cursor: pointer;
+        &::after {
+          opacity: 1;
+        }
+      }
+      &::after {
+        transition: 0.125s;
+        // font-family: "Font Awesome 5 Free";
+        background: rgba(0, 0, 0, 0.3);
+        color: #eee;
+        opacity: 0;
+        font-weight: 900;
+        // content: "\f00d";
+        content: "X";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        // color: inherit;
+        font-size: 2.5rem;
+        display: grid;
+        /* align-self: center; */
+        align-items: center;
+        text-align: center;
+        border-radius: 8px;
+      }
+    }
+  }
