notif auto clear, added signup/login redirects

--- a/src/styles/Notifications.scss
+++ b/src/styles/Notifications.scss
@@ -14,7 +14,8 @@
       visibility: visible;
     }
     .notifications.list {
-      display: grid;
+      display: flex;
+      flex-direction: column-reverse;
       gap: 1rem;
     }
     .notif {
