--- a/src/styles/Hero.scss
+++ b/src/styles/Hero.scss
@@ -159,8 +159,8 @@
 					grid-template-rows: repeat(2, 1fr);
 					grid-auto-columns: minmax(0, 1fr);
 					grid-auto-flow: column;
-					grid-column-gap: 7px;
-					grid-row-gap: 7px;
+					grid-column-gap: 15px;
+					grid-row-gap: 15px;
 
 					li {
 						min-height: 50px;
@@ -171,6 +171,7 @@
 						padding: 0.5rem;
 						border-radius: 8px;
 						background: rgba(#fff, 0.2);
+						box-shadow: 0 1px 5px 1px rgba(#4f4f4f, 0.5);
 					}
 				}
 			}
@@ -182,12 +183,14 @@
 	}
 
 	section.login {
+
 		.loginWrapper {
-			height: 100%;
+			min-height: 80vh;
 			display: flex;
 			flex-direction: column;
 			justify-content: center;
 			align-items: center;
+			gap: 3rem;
 		}
 	}
 }
