--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -27,7 +27,7 @@
 	height: 70px;
 	width: 95%;
 	margin: 0 auto;
-	overflow: hidden;
+	/* overflow: hidden; */
 	box-shadow: 0 10px 15px rgba(22, 22, 22, 0.2);
 	backdrop-filter: blur(7px);
 	transition: all 0.3s ease;
@@ -50,9 +50,49 @@
 	justify-content: flex-end;
 }
 
+.nav-items-container ul li.nav-item div.apps-icon ul.apps-dropdown {
+	display: none;
+	padding: 1rem;
+	margin: 0;
+	position: absolute;
+	top: 50px;
+	right: 1.2rem;
+	/* display: grid; */
+	/* grid-template-columns: repeat(3, 1fr); */
+	grid-template-rows: repeat(2, 1fr);
+	/* grid-auto-columns: minmax(0, 1fr); */
+	grid-auto-flow: column;
+	grid-column-gap: 15px;
+	grid-row-gap: 15px;
+	background-color: rgb(236, 197, 172);
+	border: 3px solid #ab7f5e;
+	border-radius: 8px;
+	width: max(300px, 80%);
+	height: 0;
+	transition: all 0.3s ease;
+}
+
+.nav-items-container ul li.nav-item div.apps-icon ul.apps-dropdown.open {
+	display: grid;
+	z-index: 2;
+	height: 200px;
+}
+
+ul.apps-dropdown li {
+	cursor: pointer;
+	/* background-color: rgba(200,200,200, .2); */
+	word-break: break-word;
+	transition: all .3s ease;
+}
+
+ul.apps-dropdown li:hover {
+	background-color: rgba(222, 222, 222, 0.5);
+}
+
+/* FOR / ROUTE (HOME PAGE) */
 .nav-items-container.\/ ul.nav {
 	/* margin-right: 0; */
-	grid-template-columns: repeat(2, .5fr);
+	grid-template-columns: repeat(2, 0.5fr);
 }
 
 .navbar .nav-items-container ul {
@@ -65,14 +105,15 @@
 }
 
 .nav-items-container ul.signed-in {
-	grid-template-columns: repeat(3, .5fr);
+	grid-template-columns: repeat(3, 0.5fr);
 }
 
 .navbar .nav-items-container ul li {
-	height: 100%;
+	max-height: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	cursor: pointer;
 }
 
 .nav-item {
@@ -105,12 +146,11 @@
 }
 
 .nav-item .account-icon svg {
-	padding: .2rem;
+	padding: 0.2rem;
 	background-color: transparent;
 	border-radius: 50%;
 	color: #1f1f1f;
-	transition: all .3s ease;
-
+	transition: all 0.3s ease;
 }
 
 .nav-item .account-icon svg:hover {
