notif hover X color fix

--- a/src/styles/Notifications.scss
+++ b/src/styles/Notifications.scss
@@ -82,7 +82,7 @@
 			transition: 0.125s;
 			// font-family: "Jost";
 			background: rgba(0, 0, 0, 0.3);
-			color: #eee;
+			color: #1f1f1f;
 			opacity: 0;
 			font-weight: 700;
 			// content: "\f00d";
