--- a/src/styles/AppDiseaseId.scss
+++ b/src/styles/AppDiseaseId.scss
@@ -33,7 +33,7 @@
 				.inputWrapper {
 					display: flex;
 					align-items: center;
-					gap: .5rem;
+					gap: 0.5rem;
 					width: 80%;
 					margin: 0 auto;
 					padding: 0.5rem;
@@ -42,32 +42,30 @@
 						width: 80%;
 						padding: 1rem 1.5rem;
 						border-radius: 8px;
-						background: rgba(#fff, .5);
+						background: rgba(#fff, 0.5);
 						border: 2px solid transparent;
 						padding: 0.9rem 1rem;
 						border-radius: 16px 0 0 16px;
 						outline: none;
-						transition: all .3s ease;
-
+						transition: all 0.3s ease;
 
 						&:hover {
-							border-color: rgba(#fff, .7);
+							border-color: rgba(#fff, 0.7);
 						}
 					}
 
 					button {
 						height: 100% !important;
-						padding: .7rem 1rem;
+						padding: 1rem;
 						border-radius: 0 16px 16px 0;
 						border-style: none;
-						background: rgba(#fff, .5);
+						background: rgba(#fff, 0.5);
 						cursor: pointer;
-						transition: all .3s ease;
+						transition: all 0.3s ease;
 
 						&:hover {
 							background: #fff;
 						}
-
 					}
 				}
 
@@ -81,6 +79,9 @@
 					overflow: auto;
 
 					span.symptom {
+						display: flex;
+						justify-content: center;
+						align-items: center;
 						padding: 0.3rem 0.4rem;
 						background: rgba(#fff, 0.3);
 						border-radius: 8px;
