--- a/src/styles/AppDiseaseId.scss
+++ b/src/styles/AppDiseaseId.scss
@@ -24,6 +24,7 @@
 		}
 
 		.panel {
+			min-height: 70vh;
 			.inputAndSymptomsWrapper {
 				display: flex;
 				flex-direction: column;
@@ -33,7 +34,7 @@
 				.inputWrapper {
 					display: flex;
 					align-items: center;
-					gap: 0.5rem;
+					gap: .5rem;
 					width: 80%;
 					margin: 0 auto;
 					padding: 0.5rem;
@@ -79,10 +80,11 @@
 					overflow: auto;
 
 					span.symptom {
+						position: relative;
 						display: flex;
 						justify-content: center;
 						align-items: center;
-						padding: 0.3rem 0.4rem;
+						padding: .6rem 1.2rem;
 						background: rgba(#fff, 0.3);
 						border-radius: 8px;
 						cursor: pointer;
@@ -97,37 +99,90 @@
 							background: rgba(#fff, 0.5);
 						}
 
-						&.selected {
-							&::after {
-								opacity: 1;
-							}
+						&.selected .overlay {
+							opacity: 1;
+							transform: scale(1);
 						}
-						&::after {
-							transition: 0.125s;
-							// font-family: "Jost";
-							background: rgba(221, 221, 221, 0.8);
-							color: #1f1f1f;
-							opacity: 0;
-							// font-weight: 700;
-							// content: "\f00d";
-							content: "\\/";
-							position: relative;
-							top: -23px;
-							width: 99%;
-							height: 99%;
-							// color: inherit;
-							// font-size: 2.5rem;
-							display: grid;
-							padding: 0;
-							margin: 0;
-							/* align-self: center; */
-							align-items: center;
-							text-align: center;
+
+						.overlay {
+							pointer-events: none;
+							position: absolute;
+							background-color: rgba(white, 0.6);
 							border-radius: 8px;
+							width: 100%;
+							height: 100%;
+							top: 0;
+							transform: scale(.001);
+							opacity: 0;
+							transition: transform 0.4s ease 0s;
+						}
+
+						.overlay span {
+							pointer-events: none;
+							position: absolute;
+							top: 50%;
+							left: 50%;
+							transform: translate(-50%, -50%);
+							font-weight: bold;
+							font-size: 2em;
+							color: #252525;
+							font-family: Sans-serif;
 						}
 					}
 				}
 			}
+
+			.predictButton {
+				background-color: rgba(white, .3);
+				padding: 1rem 2rem;
+				border-radius: 8px;
+				border-style: none;
+				cursor: pointer;
+			}
+
+			&.panel3 {
+				.header {
+					font-size: 22px;
+
+					span {
+						font-size: 18px;
+					}
+
+					h2 {
+						font-weight: 600;
+					}
+				}
+
+				h4 {
+					font-weight: 400;
+					font-size: 18px;
+				}
+
+				ul.precautionsContainer {
+					width: min(600px, 90%);
+					list-style: none;
+					margin: 0 auto;
+					background-color: rgba(white, .1);
+					border: 2px solid rgba(white, .3);
+					border-radius: 8px;
+					padding: 2rem 0;
+					display: flex;
+					flex-direction: column;
+					justify-content: center;
+					align-items: center;
+					font-size: 18px;
+					gap: .5rem;
+
+				}
+			}
 		}
+	}
+
+	.disclaimer {
+		background-color: rgba(red, .3);
+		margin: auto auto 1rem auto;
+		padding: 1rem;
+		bottom: 0;
+		width: 85%;
 	}
 }
