--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -1,6 +1,89 @@
-
-
 div.Home {
-    height: auto;
-    margin-top: 7rem;
+	height: 100vh;
+	overflow-y: auto;
+	margin-top: 7rem;
+
+	.mainWelcomeText {
+		font-weight: 600;
+		font-size: 24px;
+		color: rgb(149, 41, 20);
+        margin-bottom: 2rem;
+
+		span {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			gap: 1rem;
+		}
+	}
+
+	.mainContent {
+		width: min(1000px, 90%);
+		margin: 0 auto;
+		display: flex;
+        border: 3px solid rgba(white, .2);
+        padding: 1rem 1.5rem 0 1.5rem;
+        border-radius: 12px;
+
+		.avatarContainer {
+			height: 400px;
+			max-height: 70%;
+			width: auto;
+			flex: 4;
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+
+			.avatarOffset {
+				flex: 2;
+			}
+			.image-container {
+				flex: 8;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+
+				img {
+					object-fit: contain;
+				}
+			}
+		}
+
+		.suggestionsContainer {
+			flex: 5;
+            // border: 3px solid red;
+
+            .suggestionsTitle {
+                font-weight: 600;
+                font-size: 20px;
+            }
+
+            .suggestionActivities {
+                display: flex;
+                flex-direction: column;
+                gap: 1rem;
+                width: 80%;
+                margin: 1rem auto 0 auto;
+
+                .activity {
+                    padding: 1rem .5rem;
+                    background-color: rgba(white, .3);
+                    border: 4px solid transparent;
+                    border-radius: 8px;
+                    cursor: pointer;
+                    transition: all .3s ease;
+                    transform: translateY(0);
+
+                    &:hover {
+                        background-color: rgba(white, .4);
+                        border: 4px solid rgba(white, .6);
+                        border-style: dotted;
+                        transform: translateY(-1px);
+                        box-shadow: 0px 1px 10px 4px rgba(rgb(55, 55, 55), .1);
+                    }
+                }
+            }
+		}
+	}
 }
