--- a/src/styles/Hero.scss
+++ b/src/styles/Hero.scss
@@ -189,6 +189,11 @@
 			justify-content: center;
 			align-items: center;
 			gap: 3rem;
+
+			
+			.doubleBtn {
+				box-shadow: 0 1px 35px 15px rgba(rgb(210, 107, 17), .3);
+			}
 		}
 	}
 }
