quotes page + changes

--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -49,7 +49,7 @@ div.Home {
 					flex: 8;
 					display: flex;
 					justify-content: center;
-					align-items: center;
+					align-items: flex-end;
 
 					img {
 						object-fit: contain;
